--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,4 +1,4 @@
-@value makerBlack from './common/colors.css';
+@value makerWhite from './common/colors.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: makerBlack;
+  background-color: makerWhite;
 }
 
 code {
